--- a/public/style/main.css
+++ b/public/style/main.css
@@ -97,6 +97,9 @@ header.banner {
   margin: 2rem auto;
   padding: 1rem;
   text-align: center;
+
+  position: relative;
+  z-index: 0;
 }
 
 .main-box {
@@ -225,6 +228,8 @@ header.banner {
   background: rgba(0, 0, 0, 0.5);
   justify-content: center;
   align-items: center;
+
+  z-index: 3;
 }
 
 .popup-content {
